crates/board-tui/tests/snapshots/snapshots__archived_cards_all.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render(&mut d, 120, 35)"
---
" ◈ herdr-board ● 1 running          [ Global ▾ ]                   [ main ▾ ]            [ Active ] [ All ] [ Archived ]"
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌ EXECUTE · AUTO · 2 ────────┐┌ REVIEW · AUTO · 2 ─────────┐┌ HUMAN REVIEW · MANUAL · 0 ─┐┌ DONE · MANUAL · 2 ─────────┐"
"│┌──────────────────────────┐││┌──────────────────────[▶]─┐││                            ││┌──────────────────────────┐│"
"││#3 Fix flaky test         ││││#5 Refactor auth module   │││                            │││#7 Ship v0.1              ││"
"││⧗ queued                  ││││✗ failed                  │││                            │││▣ archived                ││"
"││claude                    ││││claude · eff: medium      │││                            │││claude                    ││"
"│└──────────────────────────┘││└──────────────────────────┘││                            ││└──────────────────────────┘│"
"│┌──────────────────────[▶]─┐││┌──────────────────────[▶]─┐││                            ││┌──────────────────────[▶]─┐│"
"││#4 Investigate crash      ││││#6 Tune retry backoff     │││                            │││#8 Write changelog        ││"
"││⏸ blocked                 ││││? awaiting                │││                            │││✓ done                    ││"
"││claude                    ││││claude                    │││                            │││claude                    ││"
"│└──────────────────────────┘││└──────────────────────────┘││                            ││└──────────────────────────┘│"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"└────────────────────────────┘└────────────────────────────┘└────────────────────────────┘└────────────────────────────┘"
" [ + Card ]  [ Open card ]  [ Archive ] [ + Column ]  [ Edit col ]  [ Del col ] [ Move col ]  [ Template ]  [ ? Help ]  "
