crates/board-tui/tests/snapshots/snapshots__board_picker_80x24.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render(&mut narrow, 80, 24)"
---
" ◈ herdr-board ● 1 running [ Glo… ▾ ][ main ▾ ]  [ Active ] [ All ] [ Archived ]"
"────────────────────────────────────────────────────────────────────────────────"
"┌ TODO · MANUAL · 1 ──────┐┌ PLAN · AUTO · 1 ────────┐┌ EXECUTE · AUTO · 2 ────┐"
"│┌───────────────────────┐││┌───────────────────[▶]─┐││┌──────────────────────┐│"
"││#1 Update docs         ││││#2 Add retry to MELI s…││││#3 Fix flaky test     ││"
"││· idle                 ││││▶ running · 2m0s       ││││⧗ queued              ││"
"││claude                 ││││claude · eff: high     ││││claude                ││"
"│└───────────────────────┘││└───────────────────────┘││└──────────────────────┘│"
"│                         ││                         ││┌──────────────────[▶]─┐│"
"│                ┌ Switch board · Global [ACTIVE] ──────[ X ]─┐stigate crash  ││"
"│                │›main                                       │ed             ││"
"│                │ ⇄ Other projects…                          │               ││"
"│                │ ＋ New board                               │───────────────┘│" Hidden by multi-width symbols: [(20, " ")]
"│                │    v:cycle a:archive r:restore [ACTIVE]    │                │"
"│                └────────────────────────────────────────────┘                │"
"│                         ││                         ││                        │"
"│                         ││                         ││                        │"
"│                         ││                         ││                        │"
"│                         ││                         ││                        │"
"│                         ││                         ││                        │"
"│                         ││                         ││                        │"
"└─────────────────────────┘└─────────────────────────┘└────────────────────────┘"
" [ + New card ]  [ Open card ]  [ Archive card ][ + New column ][ Edit column ] "
" [ Delete column ]    [ Move column ]       [ Template ]         [ ? Help ]     "
