crates/board-tui/tests/snapshots/snapshots__delete_column_picker.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render(&mut d, 80, 24)"
---
" ◈ herdr-board ● 1 running [ Glo… ▾ ][ main ▾ ]  [ Active ] [ All ] [ Archived ]"
"────────────────────────────────────────────────────────────────────────────────"
"┌ TODO · MANUAL · 1 ──────┐┌ PLAN · AUTO · 1 ────────┐┌ EXECUTE · AUTO · 2 ────┐"
"│┌───────────────────────┐││┌───────────────────[▶]─┐││┌──────────────────────┐│"
"││#1 Update docs         ││││#2 Add retry to MELI s…││││#3 Fix flaky test     ││"
"││· idle                 ││││▶ running · 2m0s       ││││⧗ queued              ││"
"││claude                 ││││claude · eff: high     ││││claude                ││"
"│└───────────────────────┘││└───────────────────────┘││└──────────────────────┘│"
"│                 ┌ Move cards to which column? ──────[ X ]─┐─────────────[▶]─┐│"
"│                 │›Plan                                    │vestigate crash  ││"
"│                 │ Execute                                 │cked             ││"
"│                 │ Review                                  │e                ││"
"│                 │ Human Review                            │─────────────────┘│"
"│                 │ Done                                    │                  │"
"│                 └─────────────────────────────────────────┘                  │"
"│                         ││                         ││                        │"
"│                         ││                         ││                        │"
"│                         ││                         ││                        │"
"│                         ││                         ││                        │"
"│                         ││                         ││                        │"
"│                         ││                         ││                        │"
"└─────────────────────────┘└─────────────────────────┘└────────────────────────┘"
" [ + New card ]  [ Open card ]  [ Archive card ][ + New column ][ Edit column ] "
" [ Delete column ]    [ Move column ]       [ Template ]         [ ? Help ]     "
