crates/board-tui/tests/snapshots/snapshots__help_overlay.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: output
---
" ◈ herdr-board ● 1 running [ Glo… ▾ ][ main ▾ ]  [ Active ] [ All ] [ Archived ]"
"────────────────────────────────────────────────────────────────────────────────"
"┌ Help — all keybindings ────────────────────────────────────────────────[ X ]─┐"
"│┌Board ─────────────────────────────────────────────────────────────────────┐▲│"
"││←/→ h/l     focus column                                                   │█│"
"││↑/↓ k/j     focus card                                                     │█│"
"││p           switch project                                                 │││"
"││b           switch board                                                   │││"
"││n           new card                                                       │││"
"││N           new column                                                     │││"
"││e           edit card                                                      │││"
"││E           edit focused column                                            │││"
"││a           archive / restore card                                         │││"
"││C           duplicate card                                                 │││"
"││v           cycle active/all/archived                                      │││"
"││t           Todo: all/ready/mine                                           │││"
"││d           delete card                                                    │││"
"││D           delete/move column cards                                       │││"
"││m           move card (project→board)                                      │││"
"││M           move focused column                                            │││"
"││O           reorder card in column                                         │▼│"
"└──────────────────────────────────────────────────────────────────────────────┘"
" [ + New card ]  [ Open card ]  [ Archive card ][ + New column ][ Edit column ] "
" [ Delete column ]    [ Move column ]       [ Template ]         [ ? Help ]     "
